--- a/src/styles.css
+++ b/src/styles.css
@@ -38,10 +38,15 @@ input {
 }
 
 label {
+    display: flex;
+    flex-direction: column;
     font-size:25px;
     color: deepskyblue;
     text-align: left;
-    padding-bottom:2%;
+    padding-bottom:5%;
+    width: 250px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 button {
